ronda de colores personajes

--- a/app-muiscas/www/rondadecolores/html/estrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa4.html
@@ -17,7 +17,12 @@
 <a href="estrofa5.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
+ <div id="papagayo" class="inicio gris">    
+	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo3.gif">
+</div>
+    
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+    
 </body>
 
 </html>
