--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa1.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa1.html
@@ -10,10 +10,10 @@
 </head>
 
 <body class="fondoestrofa1">
-<h1 id="cuchaviva" onclick="efectos('cuchaviva','cuchavivazoom')" class="cuchavivap"> CUCHAVIVA</h1>
+<h1 id="cuchaviva" onclick="efectos('cuchaviva','cuchavivazoom')" class="cuchavivap"> CUCHAVIRA</h1>
 <h1 class="estrofa2">Chuquy,mbique <br>choc Zbquyqua...<br> Chysquyco, tyba, muyny, Fusua </h1>
 
-<a href="estrofa2.html">
+<a href="muyscaestrofa2.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 
