--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa2.html
@@ -12,12 +12,15 @@
 <body class="fondoestrofa2" >
 <h1 class="estrofa2">Hiístcha Guaía, mbique <br>choc zbquyqua ...<br>Chuquyc, Chibchihiua </h1>
 
-<a href="estrofa1.html">
+<a href="muyscaestrofa1.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa3.html">
+<a href="muyscaestrofa3.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
+<img  class="nina" src="../imagenes/nina.png">
+<img  class="planeta" src="../imagenes/latierra3.png">   
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
 </body>
 
