--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa3.html
@@ -12,19 +12,26 @@
 <body class="fondoestrofa3">
 
 <h1 class="estrofa3">Chuquy, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Qinzha</h1>
-<a href="estrofa2.html">
+<a href="muyscaestrofa2.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa4.html">
+<a href="muyscaestrofa4.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-
-
-<h1 class="estrofa3">Chuquy, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Quynzha</h1>
-
-
-
-<h1 class="estrofa3">Chuquy, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Quynzha</h1>
+<div id="colibri" class="inicio gris">    
+	<img class="colibrigif" onclick="efectos('colibri','final')" src="../imagenes/colibriderecha.gif">
+</div>
+    <div>
+         <img class="colibri2"src="../imagenes/colibri2.gif">
+         <img class="coli3"src="../imagenes/colibri.gif">
+    </div>
+<a href="estrofa2.html">
+    <img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="estrofa4.html">
+    <img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
+    <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
 </body>
 
