--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa7.html
@@ -12,12 +12,17 @@
 <body class="fondoestrofa7">
 <h1 class="estrofa7">Muyso, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Ezhinte</h1>
 
-<a href="estrofa6.html">
+<a href="muyscaestrofa6.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa8.html">
+<a href="muyscaestrofa8.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
+<div id="buho" class="inicio gris">    
+	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/gifbuho.gif">
+</div>
+    
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
 </body>
 
