--- a/app-muiscas/www/rondadecolores/html/estrofa5.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa5.html
@@ -19,6 +19,12 @@
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+<div id="caballo" class="inicio gris">    
+	<img class="caballo1" onclick="efectos('caballo','final')" src="../imagenes/caballo.gif">
+</div>
+    
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+    
 </body>
 
 </html>
