--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
@@ -12,12 +12,16 @@
 <body class="fondoestrofa4">
 <h1 class="estrofa4">Quinzha, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Aso</h1>
 
-<a href="estrofa3.html">
+<a href="muyscaestrofa3.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa5.html">
+<a href="muyscaestrofa5.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
+<div id="papagayo" class="inicio gris">    
+	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo3.gif">
+</div>       
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">   
 
 </body>
 
