--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa5.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa5.html
@@ -12,15 +12,17 @@
 <body class="fondoestrofa5">
 <h1 class="estrofa5">Aso, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Hycabai</h1>
 
-<a href="estrofa4.html">
+<a href="muyscaestrofa4.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa6.html">
+<a href="muyscaestrofa6.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
-<<<<<<< HEAD
 </a>
-
-</a>
+<div id="caballo" class="inicio gris">    
+	<img class="caballo1" onclick="efectos('caballo','final')" src="../imagenes/caballo.gif">
+</div>
+    
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 </body>
 
 </html>
