--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa6.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa6.html
@@ -12,12 +12,17 @@
 <body class="fondoestrofa6">
 <h1 class="estrofa6">Hycabai, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Muyso</h1>
 
-<a href="estrofa5.html">
+<a href="muyscaestrofa5.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa7.html">
+<a href="muyscaestrofa7.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
+    <div id="caballo" class="inicio gris">    
+	<img class="caballo1" onclick="efectos('caballo','final')" src="../imagenes/caballo.gif">
+</div>
+    
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
 </body>
 
