--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa8.html
@@ -11,14 +11,20 @@
 
 <body>
 
-<a href="estrofa7.html">
+<a href="muyscaestrofa7.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa9.html">
+<a href="muyscaestrofa9.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 
 <h1 class="estrofa8">Ezhinte, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Zihita</h1>
+<div id="buho" class="inicio gris">    
+	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/gifbuho.gif">
+</div>
+    
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+
 
 </body>
 
