completo ejercicio saludos.html

--- a/app-muiscas/www/saludos/html/choa.html
+++ b/app-muiscas/www/saludos/html/choa.html
@@ -91,6 +91,11 @@
         <p id="boton" onclick="dialogo(preguntas2,respuestas2,event)" class="enter">&#8592;<p>
     </div>
 </div>
+<div id="tot" class="total">
+        <p class="enunciado">Haz logrado responder todas las preguntas sin equivocarte 3 veces</p>
+        <a class="opciones" href="../saludos.html">Saludos</a>
+        <a class="opciones" href="../html/choa.html">Comenzar<p>
+</div>
 <audio id="choa" src="../audio/choa.ogg"></audio>
 <audio id="chogue" src="../audio/chogue.ogg"></audio>
 <audio id="chibu" src="../audio/chibu.ogg"></audio>
