ronda de colores adelantos

--- a/app-muiscas/www/rondadecolores/html/estrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa3.html
@@ -27,6 +27,10 @@
 </a>
     <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
+
 </body>
 
 </html>
