--- a/app-muiscas/www/rondadecolores/html/estrofa5.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa5.html
@@ -24,7 +24,10 @@
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
-    
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
+ 
 </body>
 
 </html>
