--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
@@ -21,6 +21,11 @@
       <img class="colibri2"src="../imagenes/colibri2.gif">
     <img class="papagayo1" src="../imagenes/papagayo3.gif">
     <img class="caballo1"  src="../imagenes/caballo.gif">
-
+<a href="muyscaestrofa9.html">
+<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+</a>
+<a href="lebique..html">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+</a>
 
 </html>
