--- a/app-muiscas/www/rondadecolores/html/estrofa1.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa1.html
@@ -14,8 +14,9 @@
 <a href="estrofa2.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-
-
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 
 
 </body>
