--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -15,13 +15,17 @@
 <a href="estrofa1.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
+    
 <a href="estrofa3.html">
-<img  class="derecha" src="../imagenes/iconoadelante.png">
+<img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 
     <img  class="nina" src="../imagenes/nina.png">
     <img  class="planeta" src="../imagenes/latierra3.png">   
     <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 
 </body>
 
