--- a/app-muiscas/www/rondadecolores/html/estrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa4.html
@@ -23,6 +23,10 @@
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
     
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
+
 </body>
 
 </html>
