--- a/app-muiscas/www/rondadecolores/html/estrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa7.html
@@ -23,6 +23,9 @@
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 
 </body>
 
