--- a/app-muiscas/www/rondadecolores/html/estrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa9.html
@@ -18,6 +18,9 @@
 <a href="estrofa10.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 
 </body>
 
