terminada visión vertical ronda de colores

--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -11,10 +11,12 @@
     <script type="text/javascript" src="js/rondadecolores.js"></script>
     <title>ronda de colores</title>
 </head>
-
 <body class="fondoestrofa7">
 <div class="mensaje">
-    <h1 class0"textomensaje"> Por favor gire su dispositivo</h1>
+    <h1> Por favor gire su dispositivo</h1>
+    <a href="../index.html">
+        <h1>Atrás</h1>
+    </a>
 </div>
 <h1 id="lebique" onclick="efectos('lebique','lebiquezoom naranja amarillo azul')" class="lebiqueronda">Lebique</h1>
 
