Arregle edición de dibujos, estrofa 8 y 9 las agregue a css

--- a/app-muiscas/www/rondadecolores/html/estrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa4.html
@@ -20,7 +20,7 @@
 </a>
 
 <div id="papagayo" class="inicio gris">    
-	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo3.gif">
+	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo.gif">
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
