--- a/app-muiscas/www/rondadecolores/html/estrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa8.html
@@ -21,7 +21,7 @@
 <h1 class="estrofa8">Ezhinte, regálame tus colores <br>para pintar...<br>El Sapo...Zihita </h1>
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 <div id="buho" class="inicio gris">    
-	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/gifbuho.gif">
+	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/buho3.png">
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
