--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
@@ -19,7 +19,7 @@
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 <div id="papagayo" class="inicio gris">    
-	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo3.gif">
+	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo.gif">
 </div>       
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">   
 
