sigo con saludos suprimida pantalla de resaludaciones y otros saludos

--- a/app-muiscas/www/saludos/html/choa.html
+++ b/app-muiscas/www/saludos/html/choa.html
@@ -39,6 +39,9 @@
                 <th onclick="hola('Chogue','Es la respuesta a Choa y tambien se usa en cual hora y momento del día, su significado es &quot;estoy bien&quot;','chogue','mediodia','atardecer','amanecer','medianoche')">Chogue</th>
             </tr>
             <tr>
+                <th onclick="hola('Muaz choá umzone','Es la resaludación choá, es decir que la confirma y su significado es &quot;¡Seguro estas bien!&quot;','muazchoaumzone','mediodia','atardecer','amanecer','medianoche')">Muaz choá umzone</th>
+            </tr>
+            <tr>
                 <th onclick="hola('Chibu','Usada en todo momento del día, Es una expresión exclamativa empleada como saludo informal para dirigirse a una persona que va de pasada y podría significar &quot;!hola¡&quot; o &quot;!mira¡&quot;','chibu','mediodia','atardecer','amanecer','medianoche')">Chibu</th>
             </tr>
             <tr>
@@ -98,6 +101,7 @@
 </div>
 <audio id="choa" src="../audio/choa.ogg"></audio>
 <audio id="chogue" src="../audio/chogue.ogg"></audio>
+<audio id="muazchoaumzone" src="../audio/muazchoaumzone.ogg"></audio>
 <audio id="chibu" src="../audio/chibu.ogg"></audio>
 <audio id="chibusgua" src="../audio/chibusgua.ogg"></audio>
 <audio id="guaza" src="../audio/guaza.ogg"></audio>
