--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -47,7 +47,7 @@
         <div class="burbuja derecha">
             <img class="imgaudio" src="../img/caracola.png" onclick="digito('pista2')">
                 <div class="contexto">
-                    <a class="texto" href="html/otros-saludos.html">Chogue</a>
+                    <p class="texto">Chogue</p>
                 </div>
         </div>
         <img class="caras" src="imagenes/chathombre.svg">
@@ -56,14 +56,14 @@
         <img class="caras" src="imagenes/chatmujer.svg">
         <div class="burbuja izquierda">
             <div class="contexto">
-                <a class="texto" href="html/resaludaciones.html">Muaz choa umzone</a>
+                <p class="texto">Muaz choa umzone</p>
             </div>
             <img class="imgaudio" src="../img/caracola.png" onclick="digito('pista3')">
         </div>
     </div>
     <div class="contderecha">
         <div class="burbuja derecha">
-            <img class="imgaudio" src="../img/caracola.png"onclick="digito('pista4')">
+            <img class="imgaudio" src="../img/caracola.png" onclick="digito('pista4')">
                 <div class="contexto">
                     <a class="texto" href="html/presentacion.html">Zehyca Fernando Fiquitiva gue nga cha Suba gue</a>
                 </div>
