modifique estrofa 4 y estrofa 5

--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa1.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa1.html
@@ -16,6 +16,10 @@
 <a href="muyscaestrofa2.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
+    
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 
 </body>
 
