--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa2.html
@@ -22,6 +22,10 @@
 <img  class="planeta" src="../imagenes/latierra3.png">   
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
+
 </body>
 
 </html>
