--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa4.html
@@ -16,12 +16,16 @@
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
 <a href="muyscaestrofa5.html">
-<img  class="icono derecha" src="../imagenes/iconoadelante.png">
+<   img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-<div id="papagayo" class="inicio gris">    
-	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo.gif">
-</div>       
-<img  class="arcoiris" src="../imagenes/arcoiris5.gif">   
+<div id="papagayo" class="iniciop gris">    
+	<img class="papagayo1" onclick="efectos('papagayo','finalp')" src="../imagenes/papagayo.gif">
+</div>     
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif"> 
+
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 
 </body>
 
