--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa5.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa5.html
@@ -18,11 +18,15 @@
 <a href="muyscaestrofa6.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-<div id="caballo" class="inicio gris">    
-	<img class="caballo1" onclick="efectos('caballo','final')" src="../imagenes/caballo.gif">
+<div id="caballo" class="inicioc gris">    
+	<img class="caballo1" onclick="efectos('caballo','finalc')" src="../imagenes/caballo.gif">
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 </body>
 
 </html>
