--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
@@ -19,6 +19,11 @@
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
  <h1 class="estrofa9">Zihita, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Hiistcha Guaia</h1>
+    
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
+    
 </body>
 
 
