--- a/app-muiscas/www/rondadecolores/html/estrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa4.html
@@ -11,16 +11,17 @@
 
 <body class="fondoestrofa4">
 <h1 class="estrofa4">Quinzha, regálame tus colores <br>para pintar...<br>Al Papagayo..Aso</h1>
+    
 <a href="estrofa3.html">
-<img  class="icono izquierda" src="../imagenes/iconoatras.png">
+    <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
 
 <a href="estrofa5.html">
     <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 
-<div id="papagayo" class="inicio gris">    
-	<img class="papagayo1" onclick="efectos('papagayo','final')" src="../imagenes/papagayo.gif">
+<div id="papagayo" class="iniciop gris">    
+	<img class="papagayo1" onclick="efectos('papagayo','finalp')" src="../imagenes/papagayo.gif">
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
