--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa3.html
@@ -25,13 +25,17 @@
          <img class="colibri2"src="../imagenes/colibri2.gif">
          <img class="coli3"src="../imagenes/colibri.gif">
     </div>
-<a href="estrofa2.html">
+<a href="muyscaestrofa2.html">
     <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="estrofa4.html">
+<a href="muyscaestrofa4.html">
     <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
     <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
 
 </body>
 
