--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa6.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa6.html
@@ -24,6 +24,10 @@
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
+<a href="../rondadecolores.html">
+    <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
+</a>
+
 </body>
 
 </html>
