--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
@@ -14,20 +14,17 @@
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
 
-<h1 class="estrofa10">Cuchaviva,Qinzha, <br>Aso, Hycabai<br> Muyso, Ezhinte<br>Hiístcha Guaía, Tierra Madre<br>Hiístcha Guaía, Tierra Madre...Bis </h1>
+<h1 class="estrofa10">Cuchavira,Qinzha, <br>Aso, Hycabai<br> Muyso, Ezhinte<br>Hiístcha Guaía, Uaia hicha<br>Hiístcha Guaía, Uaia hicha..Bis </h1>
     
-<img  class="planeta" src="../imagenes/latierra3.png">   
+<img  class="planetaestrofa10" src="../imagenes/latierra3.png">   
     <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
-      <img class="colibri2"src="../imagenes/colibri2.gif">
-    <img class="papagayo1" src="../imagenes/papagayo3.gif">
-    <img class="caballo1"  src="../imagenes/caballo.gif">
+    <img class="colibri2"src="../imagenes/colibri2.gif">
+    <img class="papagayoestro10" src="../imagenes/papagayoizquierda.gif">
+    <img class="caballoes10"  src="../imagenes/caballo.gif">
 <a href="muyscaestrofa9.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-<a href="lebique.html">
-<img  class="icono derecha" src="../imagenes/iconoadelante.png">
-</a>
-    
+
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
