--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa6.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa6.html
@@ -18,8 +18,8 @@
 <a href="muyscaestrofa7.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-    <div id="caballo" class="inicio gris">    
-	<img class="caballo1" onclick="efectos('caballo','final')" src="../imagenes/caballo.gif">
+<div id="caballo" class="inicioc gris">    
+	<img class="caballo1" onclick="efectos('caballo','finalc')" src="../imagenes/caballo.gif">
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
