cuadrando buho y serpiente para que adriana mire

--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -13,7 +13,7 @@
 </head>
 <body class="fondoestrofa7">
 <div class="mensaje">
-    <h1> Por favor gire su dispositivo</h1>
+    <h1> Por favor gire su dispositivo.</h1>
     <a href="../index.html">
         <h1>Atrás</h1>
     </a>
