--- a/app-muiscas/www/rondadecolores/html/estrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa8.html
@@ -22,8 +22,10 @@
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 <div id="buho" class="inicio gris">    
 	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/buho3.png">
-</div>
+    <img class="buho1" onclick="efectos('buho','final')" src="../imagenes/buho2.GIF">
     
+</div>
+
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
 
