haciendo cambios locos de adriana

--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -19,7 +19,7 @@
     </a>
 </div>
 <h1 id="lebique" onclick="efectos('lebique','lebiquezoom naranja amarillo azul')" class="lebiqueronda">Lebique</h1>
-
+<img src="imagenes/arcoiris5.gif"
 
 <a href="html/biografiapoeta.html">
     <img  class="poeta" src="imagenes/poeta.png">
