--- a/app-muiscas/www/rondadecolores/html/poeta.html
+++ b/app-muiscas/www/rondadecolores/html/poeta.html
@@ -10,10 +10,20 @@
 </head>
 
 <body>
-<a class="####">Kiyetiatigua Cabiativa
-Indigena perteneciente al pueblo Muisca. Nacido en predios del 
-antiguo Resguardo de "El Cerr" en 19XX , ubicado en Suba y que fue
-obsorbido por la expansion urbana de Bogotá. Se ha caracterizado por ser un constante investigador de la historia. Sus poemas estan basados en las historias que ha venido escuchando trasmitidas de generacion en generacion, por sus abuelos y antepasados. Sus poemas han salido en la revista "Suati: Cancion del Sol" y en el libro: "WOUMAIN poesia indigena y gitana, contemporanea de Colombia.</a>
+    <div class="marco">
+        <a href="../rondadecolores.html"><img class="botonmenu" src="../../img/atrasmenu.svg"> </a>
+        <h1>Kiyetiatigua Cabiativa</h1>    
+        <div class ="poema">
+        <img  src="../imagenes/poema.png">
+        </div>
+        <div class="texto">
+        
+            <a class="textopoema">
+                Indigena perteneciente al pueblo Muisca. Nacido en predios del 
+                antiguo Resguardo de "El Cerr" en 19XX , ubicado en Suba y que fue
+                obsorbido por la expansion urbana de Bogotá. Se ha caracterizado por ser un constante investigador de la historia. Sus poemas estan basados en las historias que ha venido escuchando trasmitidas de generacion en generacion, por sus abuelos y antepasados. Sus poemas han salido en la revista "Suati: Cancion del Sol" y en el libro: "WOUMAIN poesia indigena y gitana, contemporanea de Colombia.</a>
+    </div>
+    </div>
 </body>
 
 
