organizando con adriana telefonicamente

--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa10.html
@@ -10,6 +10,13 @@
 </head>
 
 <body class="fondo9">
+    <div class="todoslosanimales">
+        <img  src="../imagenes/buho2.GIF">
+        <img  src="../imagenes/caballo.gif">
+        <img  src="../imagenes/colibri.gif">
+        <img  src="../imagenes/papagayo.gif">
+        <img  src="../imagenes/serpiente1.gif">
+    </div>
 <a href="muyscaestrofa9.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
