--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -29,7 +29,7 @@
     <img  class="lebique" src="imagenes/lebique.png">
 </a>
 
-<a href="html/rondadecolores.html">
+<a href="html/rondadecoloresaudio.html">
     <img  class="ronda" src="imagenes/ronda2.png">
 </a>
 
