--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
@@ -13,6 +13,13 @@
 
 
 <a href="muyscaestrofa8.html">
+    <div class="todoslosanimales">
+        <img  src="../imagenes/buho2.GIF">
+        <img  src="../imagenes/caballo.gif">
+        <img  src="../imagenes/colibri.gif">
+        <img  src="../imagenes/papagayo.gif">
+        <img  src="../imagenes/serpiente1.gif">
+    </div>
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
 <a href="muyscaestrofa10.html">
