cambios en ronda de colores pagina principal estrofas 6 7 8

--- a/app-muiscas/www/rondadecolores/html/estrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa7.html
@@ -21,6 +21,8 @@
 <div id="buho" class="inicio gris">    
 	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/buho2.GIF">
 </div>
+
+<img  class="arbol" src="../imagenes/arbol.png">
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
