--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -11,17 +11,17 @@
     <script type="text/javascript" src="js/rondadecolores.js"></script>
     <title>ronda de colores</title>
 </head>
-<body class="fondoestrofa7">
+<body class="fondoprincipal">
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
     <a href="../index.html">
         <h1>Atrás</h1>
     </a>
 </div>
+    
 <h1 id="lebique" onclick="efectos('lebique','lebiquezoom naranja amarillo azul')" class="lebiqueronda">Lebique</h1>
-<img src="imagenes/arcoiris5.gif">
 
-<a href="html/biografiapoeta.html">
+<a href="poeta.html">
     <img  class="poeta" src="imagenes/poeta.png">
 </a>
 
@@ -29,7 +29,7 @@
     <img  class="lebique" src="imagenes/lebique.png">
 </a>
 
-<a href="html/rondadecoloresaudio.html">
+<a href="html/rondadecolores.html">
     <img  class="ronda" src="imagenes/ronda2.png">
 </a>
 
