agrgando boton atras en vertical y horizontal de informacion

--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -11,6 +11,10 @@
     </head>
     <body>
         <div class= "cabecera">
+            <a href="../index.html">
+        <img class="logo" src="../img/atrasmenu.svg">
+    </a>
+            
             <p class = "titulos">Cartilla Muysccubun</p>
         </div>
         <div class ="subtitulo"><p> Agradecimientos</p> </div>        
