--- a/app-muiscas/www/rondadecolores/html/estrofa6.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa6.html
@@ -34,7 +34,7 @@
 	<img class="serpiente1" onclick="efectos('serpiente','finals')" src="../imagenes/serpiente1.gif">
 </div>
     
-
+<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
