--- a/app-muiscas/www/rondadecolores/html/estrofa1.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa1.html
@@ -20,7 +20,7 @@
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
 
-
+<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
