--- a/app-muiscas/www/rondadecolores/html/estrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa9.html
@@ -30,7 +30,7 @@
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
-
+<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
