ok audios con onclick en roda de colores

--- a/app-muiscas/www/rondadecolores/html/estrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa3.html
@@ -13,7 +13,7 @@
 
 <h1 class="estrofa3">Cuchaviva, regálame tus colores <br>para pintar...<br>Al Colibrí..Qynzha</h1>
 <div id="colibri" class="inicio gris">    
-	<img class="colibrigif" onclick="efectos('colibri','final')" src="../imagenes/colibriderecha.gif">
+	<img class="colibrigif" onclick="efectos('colibri','final'); audio('pista')" src="../imagenes/colibriderecha.gif">
 </div>
     <div>
          <img class="colibri2"src="../imagenes/colibri2.gif">
@@ -30,7 +30,7 @@
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
-<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
+<audio id="pista" src="../audios/estrofa3.ogg" preload="auto" type="audio/ogg" ></audio>
 </body>
 
 </html>
