--- a/app-muiscas/www/rondadecolores/html/estrofa4.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa4.html
@@ -21,7 +21,7 @@
 </a>
 
 <div id="papagayo" class="iniciop gris">    
-	<img class="papagayo1" onclick="efectos('papagayo','finalp')" src="../imagenes/papagayo.gif">
+	<img class="papagayo1" onclick="efectos('papagayo','finalp'); audio('pista')" src="../imagenes/papagayo.gif">
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
@@ -29,7 +29,7 @@
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
-<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
+<audio id="pista" src="../audios/estrofa4.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
