--- a/app-muiscas/www/rondadecolores/html/estrofa5.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa5.html
@@ -19,14 +19,17 @@
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
-<div id="caballo" class="inicioc gris">    
-	<img class="caballo1" onclick="efectos('caballo','finalc')" src="../imagenes/caballo.gif">
+
+    
+    <div id="caballo" class="inicioc gris">    
+	<img class="caballo1" onclick="efectos('caballo','finalc'); audio('pista')" src="../imagenes/caballo.gif">
 </div>
     
-<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
+    <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
  <audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
