--- a/app-muiscas/www/rondadecolores/html/estrofa6.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa6.html
@@ -31,10 +31,10 @@
   
       
 <div id="serpiente" class="inicioc gris">    
-	<img class="serpiente1" onclick="efectos('serpiente','finals')" src="../imagenes/serpiente1.gif">
+	<img class="serpiente1" onclick="efectos('serpiente','finals'); audio('pista')" src="../imagenes/serpiente1.gif">
 </div>
     
-<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
+<audio id="pista" src="../audios/estrofa6.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
