--- a/app-muiscas/www/rondadecolores/html/estrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa7.html
@@ -19,7 +19,7 @@
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 <div id="buho" class="inicio gris">    
-	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/buho2.GIF">
+	<img class="buho1" onclick="efectos('buho','final'); audio('pista')" src="../imagenes/buho2.GIF">
 </div>
 
 <img  class="arbol" src="../imagenes/arbol.png">
@@ -29,7 +29,7 @@
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
-<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
+<audio id="pista" src="../audios/estrofa7.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
