--- a/app-muiscas/www/rondadecolores/html/estrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa8.html
@@ -22,7 +22,7 @@
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 <div id="buho" class="inicio gris">    
 	
-    <img class="buho1" onclick="efectos('buho','final')" src="../imagenes/buho2.GIF">
+    <img class="buho1" onclick="efectos('buho','final'); audio('pista')" src="../imagenes/rana.png">
     
 </div>
 
@@ -34,7 +34,7 @@
 </a>
 
 
-<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
+<audio id="pista" src="../audios/estrofa8.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
