--- a/app-muiscas/www/rondadecolores/html/estrofa10.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa10.html
@@ -10,12 +10,13 @@
 </head>
 
 <body class="fondoestrofa9">
-    <div class="todoslosanimales">
+     <div class="todoslosanimales" onclick="audio('pista')"  >
         <img  src="../imagenes/buho2.GIF">
         <img  src="../imagenes/caballo.gif">
         <img  src="../imagenes/colibri.gif">
         <img  src="../imagenes/papagayo.gif">
         <img  src="../imagenes/serpiente1.gif">
+    </div>
     </div>
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 <a href="estrofa9.html">
@@ -27,8 +28,8 @@
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
+<audio id="pista" src="../audios/estrofa9.ogg" preload="auto" type="audio/ogg"></audio>
 
-<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
