--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -20,13 +20,13 @@
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 
-    <img  class="nina" src="../imagenes/nina.png">
+    <img  class="nina" src="../imagenes/nina.png" onclick=" audio('pista')">
     <img  class="planeta" src="../imagenes/latierra3.png">   
     <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
-<audio id="pista" src="../audios/estrofa1.ogg" preload="auto" type="audio/ogg"></audio>
+<audio id="pista" src="../audios/estrofa2.ogg" preload="auto" type="audio/ogg"></audio>
 </body>
 
 </html>
