detallando home index vertical

--- a/app-muiscas/www/rondadecolores/html/rondadecoloresaudio.html
+++ b/app-muiscas/www/rondadecolores/html/rondadecoloresaudio.html
@@ -25,9 +25,6 @@
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
-
+<audio id="pista" src="../audios/Iebiquecancióncompleta.ogg" preload="auto" type="audio/ogg" autoplay></audio>
 </body>
-
-
-
 </html>
