creditos nombre, optimizacion de imagene

--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -24,6 +24,32 @@
             <img class="iconoinf" src="logosuba.png">
             <img class="iconoinf" src="bogota.jpg">
             <img class="iconoinf" src="logobosa.png">
+            <div class="creditos">
+                <h1>Creditos</h1>
+<p>Nataly  Bulla</p>
+<p>Andrés Bulla</p>
+<p>María Angélica Cabiativa</p>
+<p>Natalia Caita</p>
+<p>Andrés Guerrero</p>
+<p>Sarah Arévalo</p>
+<p>Diana Garibello</p>
+<p>Carlos Herrera</p>
+<p>Rosa Chisaba</p>
+<p>Mabel Niviayo</p>
+<p>Mayra Andrea</p>
+<p>Yenny Cardozo</p>
+<p>Miguel Maecha</p>
+<p>David Yopasa</p>
+<p>Diego Gómez</p>
+<p>Jorge Yopasa Cardenas</p>
+<p>Miguel Yopasa</p>
+<p>Ivan Niviayo</p>
+<p>Gonzalo Cabiativa</p>
+<p>Carlos Andrés Rocha</p>
+<p>Carlos Alfoso Cobadela </p>
+<p>Luz Adriana Murcia</p>
+            </div>
+            
         </div>
     </body>
 </html>
