arregos pagina principal ronda decolores, estrofa 1

--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -11,17 +11,25 @@
     <script type="text/javascript" src="js/rondadecolores.js"></script>
     <title>ronda de colores</title>
 </head>
-<body class="fondoprincipal">
+<body class="fondoestrofa7">
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
     <a href="../index.html">
         <h1>Atrás</h1>
     </a>
 </div>
-    
-<h1 id="lebique" onclick="efectos('lebique','lebiquezoom naranja amarillo azul')" class="lebiqueronda">Lebique</h1>
 
-<a href="poeta.html">
+
+    
+<h1 id="lebique1" onclick="efectos('lebique1','lebiquezoom'); audio ('pista');tiempo()" class="lebiqueronda">Lebique</h1>
+
+<audio id="pista" src="audios/lebique.ogg" type="audio/ogg"  ></audio>
+
+
+
+
+
+<a href="html/poeta.html">
     <img  class="poeta" src="imagenes/poeta.png">
 </a>
 
