--- a/app-muiscas/www/rondadecolores/html/estrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa7.html
@@ -18,11 +18,10 @@
 <a href="estrofa8.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-<div id="buho" class="inicio gris">    
-	<img class="buho1" onclick="efectos('buho','final'); audio('pista')" src="../imagenes/buho2.GIF">
+<div id="buho" class="iniciop gris">    
+	<img class="buho1" onclick="efectos('buho','finalp'); audio('pista')" src="../imagenes/buho2.GIF">
 </div>
 
-<img  class="arbol" src="../imagenes/arbol.png">
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
