--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="js/rondadecolores.js"></script>
     <title>ronda de colores</title>
 </head>
-<body class="fondoestrofa7">
+<body class="fondorondadecolores">
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
     <a href="../index.html">
