mejorando creditos ok tres fotos, adicion de logo LC y arreglo stilos textos vertical

--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -14,7 +14,7 @@
     <a href="../index.html">
     <img class="atrasmenu" src="../img/atrasmenu.svg">
     </a>
-    <h1 class = "titulo">creditos</h1>
+    <h1 class = "titulo">Créditos</h1>
 </div>
 
    
@@ -22,16 +22,22 @@
     <div class="color">
         <h1>Mhuysqas</h1>
 
-             <P>Según lo estipulado en la ley 89 de 1980 en Bogotá se encuentran dos poblaciones Mhuysqas, legalmente constituidas y avaladas por el Ministerio  del Interior y de Justicia como Cabildos Indígenas. Una de ellos se encuentran ubicado en la localidad de Suba, en áreas que comprenden La Conejera, La Cantera, El Cerro, y la Laguna Tibabuyes. La otra se encuentra ubicada en la localidad de Bosa entre las veredas San Bernardino y San José.
-            Ambas comunidades mhuyscas se reconocen como indígenas originarios de su territorio y no provenientes de ningún otro lugar, sin embrago se han creado rasgos  permeados por la relación entre lo rural y urbano.</P>
+             <p>Según lo estipulado en la ley 89 de 1980 en Bogotá se encuentran dos poblaciones Mhuysqas, legalmente constituidas y avaladas por el Ministerio  del Interior y de Justicia como Cabildos Indígenas. Una de ellos se encuentran ubicado en la localidad de Suba, en áreas que comprenden La Conejera, La Cantera, El Cerro, y la Laguna Tibabuyes. La otra se encuentra ubicada en la localidad de Bosa entre las veredas San Bernardino y San José.
+            Ambas comunidades mhuyscas se reconocen como indígenas originarios de su territorio y no provenientes de ningún otro lugar, sin embrago se han creado rasgos  permeados por la relación entre lo rural y urbano.</p>
+            <img class="fotos"src="foto1.jpg">
 
             <h2>Lengua Muysscubun</h2>
 
-            <P>En la estructura social del Nuevo Reino de Granada, la lengua muysccubun fue catalogada como una de las cuatro lenguas más importantes, gracias a ello,  y por la necesidad de evangelización, lingüístas dejaron manuscritos que han permitido emprender la revitalización de esta lengua, pues a  causa de intereses políticos desapareció y hoy en día se considera una lengua muerta. María Trillos Amaya plantea una reflexión, comparando la lengua Mhuysca con el Latín; considerando que esta última trascendió en otras lenguas, fenómeno lingüístico natural, pero por el contrario la lengua muysccubun desapareció por causas no naturales-lingüísticamente hablando- la imposición del castellano y la muerte de sus hablantes fueron causas de su exterminio. A pesar de ello Trillos Amaya también plantea que una lengua puede revitalizarse, por esta razón se unen las comunidades  Mhuyscas, lingüistas, antropólogos, sociólogos, pedagogos y diferentes instituciones en esta ardua labor de revitalizarla.</P>
+            <p>En la estructura social del Nuevo Reino de Granada, la lengua muysccubun fue catalogada como una de las cuatro lenguas más importantes, gracias a ello,  y por la necesidad de evangelización, lingüístas dejaron manuscritos que han permitido emprender la revitalización de esta lengua, pues a  causa de intereses políticos desapareció y hoy en día se considera una lengua muerta. María Trillos Amaya plantea una reflexión, comparando la lengua Mhuysca con el Latín; considerando que esta última trascendió en otras lenguas, fenómeno lingüístico natural, pero por el contrario la lengua muysccubun desapareció por causas no naturales-lingüísticamente hablando- la imposición del castellano y la muerte de sus hablantes fueron causas de su exterminio. A pesar de ello Trillos Amaya también plantea que una lengua puede revitalizarse, por esta razón se unen las comunidades  Mhuyscas, lingüistas, antropólogos, sociólogos, pedagogos y diferentes instituciones en esta ardua labor de revitalizarla.</p>
 
-                <img class="fotos"src="foto1.jpg">
-    </div>  
+</div>  
 
+            <img class="fotos2"src="foto2.jpg">
+            <img class="fotos2"src="foto3.jpg">
+
+                
+    
+<div class="color cola">
     <h1>Colaboradores en el desarollo de la aplicación cartilla muysccubun</h1>
 
     <p>Nataly  Bulla-Andrés Bulla-María Angélica Cabiativa-Natalia Caita-Andrés Guerrero-Sarah Arévalo-Diana Garibello
@@ -40,7 +46,7 @@
 </div>
 
  <div class="contenedoriconos">
-   
+    <img class="iconoinf" src="LogoLC.png"> 
     <img class="iconoinf" src="logobosa.png"> 
     <img class="iconoinf" src="logosuba.png">
     <img class="iconoinf" src="bogota.png">
