detalles varios, colores etc

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -15,25 +15,25 @@
         </div>
 
         <div class= "cuerpo">
-            <div class="botones izquierdos arriba">
+            <div class="botones izquierdos arriba color2">
                 <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/triangulosbn.svg">
                         <p>Saludos</p>
                 </a>
             </div>
-            <div class="botones derechos arriba">
+            <div class="botones derechos arriba color1">
                 <a class="textoicono" href="rondadecolores/rondadecolores.html">
                     <img class="icono" src="img/caralineasbn.svg">
                     <p>Ronda</p>
                 </a>
             </div>
-            <div class="botones izquierdos abajo">
+            <div class="botones izquierdos abajo color3">
                 <a class="textoicono" href="numeros/numerospr.html">
                     <img class="icono" src="img/espiralbn.svg">
                     <p>Números</p>
                 </a>
             </div>
-            <div class="botones derechos abajo">
+            <div class="botones derechos abajo color4">
                 <a class="textoicono" href="informacion/informacion.html">
                     <img class="icono" src="img/texturadobn.svg">
                     <p>Información</p>
