--- a/app-muiscas/www/numeros/html/informacion.html
+++ b/app-muiscas/www/numeros/html/informacion.html
@@ -18,7 +18,7 @@
     <a href="../numerospr.html">
     <img class="atrasmenu" src="../../img/atrasmenu.svg">
     </a>
-    <h1 id="titulotunjo"> Sabias que?</h1>
+    <h1 id="titulotunjo"> ¿Sabías Que? </h1>
 </div>
 
 <div class = "tunjocuerpo" >
