--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa1.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa1.html
@@ -2,7 +2,10 @@
 <html lang="es">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="../css/rondadecolores.css">
+	 <!-- Esté es el css vertical -->
+    <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="../css/mensaje.css">
+                    <!-- Este es el css horizontal -->
+	<link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="../css/rondadecolores.css">
 <script type="text/javascript" src="../js/rondadecolores.js"></script>
 <meta charset="utf-8" />
 <title>sans titre</title>
@@ -10,6 +13,14 @@
 </head>
 
 <body class="fondoestrofa1">
+    
+<div class="mensaje">
+    <h1> Por favor gire su dispositivo.</h1>
+    <a href="../index.html">
+        <h1>Atrás</h1>
+    </a>
+</div>
+    
 <h1 id="cuchaviva" onclick="efectos('cuchaviva','cuchavivazoom')" class="cuchavivap"> CUCHAVIRA</h1>
 <h1 class="estrofa2">Chuquy,mbique <br>choc Zbquyqua...<br> Chysquyco, tyba, muyny, Fusua </h1>
 
